@@ -55,12 +55,12 @@
 
     <properties>
         <!-- Vert.X version is mandatory for vertx-grpc-protoc-plugin in gravitee-gateway-standalone-container -->
-        <vertx.version>4.1.3</vertx.version>
+        <vertx.version>4.2.1</vertx.version>
         <!-- Gravitee dependencies version -->
-        <gravitee-bom.version>1.4</gravitee-bom.version>
+        <gravitee-bom.version>1.5-SNAPSHOT</gravitee-bom.version>
         <gravitee-alert-api.version>1.8.0</gravitee-alert-api.version>
         <gravitee-cockpit-api.version>1.9.0</gravitee-cockpit-api.version>
-        <gravitee-common.version>1.23.0</gravitee-common.version>
+        <gravitee-common.version>1.24.0-SNAPSHOT</gravitee-common.version>
         <gravitee-connector-api.version>1.0.0</gravitee-connector-api.version>
         <gravitee-definition.version>1.30.0</gravitee-definition.version>
         <gravitee-expression-language.version>1.7.2</gravitee-expression-language.version>
@@ -85,7 +85,7 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <commons-pool2.version>2.9.0</commons-pool2.version>
         <commons-text.version>1.9</commons-text.version>
-        <dozer.version>6.4.1</dozer.version>
+        <dozer.version>6.5.2</dozer.version>
         <everit-json-schema.version>1.14.0</everit-json-schema.version>
         <flexmark.version>0.61.16</flexmark.version>
         <freemarker.version>2.3.30</freemarker.version>
@@ -99,24 +99,24 @@
         <jackson-mapper-asl.version>1.9.13</jackson-mapper-asl.version>
         <java-jwt.version>3.10.2</java-jwt.version>
         <javassist.version>3.27.0-GA</javassist.version>
-        <javax.activation-api.version>1.2.0</javax.activation-api.version>
-        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <jakarta.validation-api.version>2.0.2</jakarta.validation-api.version>
+        <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
         <javax.inject.version>1</javax.inject.version>
         <jakarta.mail.version>1.6.7</jakarta.mail.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-        <javax.transaction-api.version>1.2</javax.transaction-api.version>
-        <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
-        <jaxb-api.version>2.3.0</jaxb-api.version>
+        <jakarta.transaction-api.version>1.3.3</jakarta.transaction-api.version>
+        <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
+        <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version>
         <jmh.version>1.26</jmh.version>
         <json-patch.version>1.13</json-patch.version>
         <json-path.version>2.6.0</json-path.version>
         <json-smart.version>2.4.7</json-smart.version>
         <jsoup.version>1.14.2</jsoup.version>
         <lucene.version>7.5.0</lucene.version>
-        <netty-tcnative-boringssl-static.version>2.0.42.Final</netty-tcnative-boringssl-static.version>
+        <netty-tcnative-boringssl-static.version>2.0.44.Final</netty-tcnative-boringssl-static.version>
         <nimbus-jose-jwt.version>8.22.1</nimbus-jose-jwt.version>
         <owasp-java-html-sanitizer.version>20211018.2</owasp-java-html-sanitizer.version>
-        <protobuf-java.version>3.17.3</protobuf-java.version>
+        <protobuf-java.version>3.19.1</protobuf-java.version>
         <powermock.version>2.0.9</powermock.version>
         <reactor-adapter.version>3.4.3</reactor-adapter.version>
         <snakeyaml.version>1.26</snakeyaml.version>
@@ -510,25 +510,25 @@
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-impl</artifactId>
-                <!-- FIXME: upgrade version when upgrading spring version -->
-                <version>2.1.2</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.xml.bind</groupId>
-                <artifactId>jaxb-api</artifactId>
-                <version>${jaxb-api.version}</version>
+                <version>2.3.5</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.activation</groupId>
-                <artifactId>javax.activation-api</artifactId>
-                <version>${javax.activation-api.version}</version>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jakarta.xml.bind-api.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.annotation</groupId>
-                <artifactId>javax.annotation-api</artifactId>
-                <version>${javax.annotation-api.version}</version>
+                <groupId>jakarta.activation</groupId>
+                <artifactId>jakarta.activation-api</artifactId>
+                <version>${jakarta.activation-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>${jakarta.annotation-api.version}</version>
             </dependency>
 
             <dependency>
@@ -550,15 +550,15 @@
             </dependency>
 
             <dependency>
-                <groupId>javax.transaction</groupId>
-                <artifactId>javax.transaction-api</artifactId>
-                <version>${javax.transaction-api.version}</version>
+                <groupId>jakarta.transaction</groupId>
+                <artifactId>jakarta.transaction-api</artifactId>
+                <version>${jakarta.transaction-api.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>${javax.validation-api.version}</version>
+                <groupId>jakarta.validation</groupId>
+                <artifactId>jakarta.validation-api</artifactId>
+                <version>${jakarta.validation-api.version}</version>
             </dependency>
 
             <dependency>
@@ -824,6 +824,13 @@
                         <phase>validate</phase>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED --add-opens java.base/java.util.stream=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
